			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

30-Aug-2000
~~~~~~~~~~~
Increased the distance you have to move the pointer to start a drag
slightly. Updated the manual.

Panel icons can now be moved from one side to the other by simply moving
over the gap in the middle. Previously, you had to jump over an icon on
the other side.

Left and right panels look better now. Also, they shrink if you add a top
or bottom panel to make room.

28-Aug-2000
~~~~~~~~~~~
Dragging on the panel background allows you to slide the bar back and
forth.

27-Aug-2000
~~~~~~~~~~~
Fixed a slight bug with lasso boxes, which could cause them to be drawn in
the wrong place. Install script no longer overwrites the default run
actions; if the user has changed them leave them alone!
(Martin Ward noted that symlinking to an executable would cause the
executable to be destroyed on upgrade!)

24-Aug-2000
~~~~~~~~~~~
More improvements to the event handling. Seems to be working again at
last!
Made the toolbar buttons slightly larger, and added a textual display
for 'Next Click' mode (eg 'Delete ... ?' when it's waiting for you to
click).
Moved the pinboard over to the new mouse binding code too.

21-Aug-2000
~~~~~~~~~~~
Started rewriting the event handling for filer windows to go through
the new code in bind.c, like the panel handling does.

20-Aug-2000
~~~~~~~~~~~
You can now drag icons from the panel to other applications.

18-Aug-2000
~~~~~~~~~~~
Dragging panel icons with the middle button allows you to move them around.

New option to set the default height for new filer windows (patch from
James Kermode).

17-Aug-2000
~~~~~~~~~~~
Selecting panel icons now grabs the primary selection. Pasting pastes all
selected file path names. Icons can now be added to either side of the panel.

Bug fix: Moving a file didn't always update the source directory.

16-Aug-2000
~~~~~~~~~~~
Many improvements to the panel - drag and drop to icons, adding new icons,