@@ -1,54 +1,472 @@
 /* XPM */
-static char *ramfs[] = {
-/* columns rows colours chars-per-pixel */
-"43 30 17 1"/* palette data */
-,
-"A c #ffffff",
-"B c #dddddd",
-"C c #bbbbbb",
-"D c #999999",
-"E c #777777",
-"F c #555555",
-"G c #333333",
-"H c #000000",
-"I c #004499",
-"J c #eeee00",
-"K c #00cc00",
-"L c #dd0000",
-"M c #eeeebb",
-"N c #558800",
-"O c #ffbb00",
-"P c #00bbff"
-"  c None"
-/* pixel data */,
-"                              HH           ",
-"                            HHHHHH         ",
-"                          HHHHHHHHHH       ",
-"                        HHHHHHCCHHHHHH     ",
-"                      HHHHHHCCHHHHHHHHHH   ",
-"                    HHHHHHHHHHHHHHHHHHHHHH ",
-"                  HHHHHHCCHHHHHHHHHHHHHHHHH",
-"                HHHHHHCCHHHHHHHHHHHHHHHHHHH",
-"              HHHHHHCCHHHHHHHHHHHHHHHHHHHHF",
-"            HHHHHHCCHHHHHHHHHHHHHHHHHHHHFFF",
-"          HHHHHHCCHHHHHCCHHHHHHHHHHHHHFFFF ",
-"        HHHHHHCCHHHHHCCHHHHHHHHHHHHHFFFE F ",
-"      HHHHHHHHHHHHHCCHHHHHHHHHHHHHFFFEF  F ",
-"    HHHHHHCCHHHHHHHHHHHHHHHHHHHHFFFF  F  F ",
-"  HHHHHHCCHHHHHCCHHHHHHHHHHHHHFFFE F  F  F ",
-" HHHHHCCHHHHHCCHHHHHHHHHHHHHFFFEF  F  F  F ",
-" HHHHHHHHHHCCHHHHHHHHHHHHHFFFF  F  F  F    ",
-" FHHHHHHHCCHHHHHHHHHHHHHFFFE F  F  F  D    ",
-"  FFHHHHHHHHHHCCHHHHHHFFFEF  F  F  F       ",
-"  F  FHHHHHHCCHHHHHHFFFF  F  F  F          ",
-"  F  F  HHHHHHHHHHFFFE F  F  F  D          ",
-"  F  F    HHHHHHFFFEF  F  F  F             ",
-"  F  D      HHFFFF  F  F  F                ",
-"  F          FFE F  F  F  D                ",
-"             DF  F  F  F                   ",
-"              F  F  F                      ",
-"              F  F  D                      ",
-"              F  F                         ",
-"              F                            ",
-"              D                            "
-};
+static char * exec_xpm[] = {
+"38 38 431 2",
+"  	c None",
+". 	c #040100",
+"+ 	c #0F0B03",
+"@ 	c #2D2514",
+"# 	c #372D19",
+"$ 	c #1F180C",
+"% 	c #20190D",
+"& 	c #151006",
+"* 	c #CDBFA4",
+"= 	c #FCF9F2",
+"- 	c #F4EFE4",
+"; 	c #D4C8B0",
+"> 	c #2F2718",
+", 	c #52504C",
+"' 	c #171107",
+") 	c #F7F7F7",
+"! 	c #FCFCFC",
+"~ 	c #DFD4C0",
+"{ 	c #52452C",
+"] 	c #5C5952",
+"^ 	c #211A0E",
+"/ 	c #FCF9F3",
+"( 	c #F1F1F1",
+"_ 	c #F9F9F9",
+": 	c #DCD2BD",
+"< 	c #645637",
+"[ 	c #6E685A",
+"} 	c #130E04",
+"| 	c #0B0701",
+"1 	c #4E422A",
+"2 	c #423722",
+"3 	c #FFFFFF",
+"4 	c #EAE2D3",
+"5 	c #7A6842",
+"6 	c #82765C",
+"7 	c #000000",
+"8 	c #020202",
+"9 	c #181307",
+"0 	c #A68F62",
+"a 	c #54472C",
+"b 	c #3A311D",
+"c 	c #464542",
+"d 	c #433923",
+"e 	c #EBE5D8",
+"f 	c #E6DECF",
+"g 	c #ECE5D7",
+"h 	c #DFD4C1",
+"i 	c #433821",
+"j 	c #675C44",
+"k 	c #282012",
+"l 	c #E9E3D8",
+"m 	c #85734E",
+"n 	c #030303",
+"o 	c #050200",
+"p 	c #A38C5F",
+"q 	c #978153",
+"r 	c #261F10",
+"s 	c #887858",
+"t 	c #AE9A70",
+"u 	c #CFC2A8",
+"v 	c #E5DECD",
+"w 	c #F0E9DC",
+"x 	c #E3DAC8",
+"y 	c #F0EADE",
+"z 	c #F2ECE1",
+"A 	c #B9A782",
+"B 	c #3F3621",
+"C 	c #151515",
+"D 	c #5A4D31",
+"E 	c #F5F5F5",
+"F 	c #E8E4DC",
+"G 	c #6D5E3F",
+"H 	c #010101",
+"I 	c #E2DFD9",
+"J 	c #FDFDFD",
+"K 	c #B6A37C",
+"L 	c #A79064",
+"M 	c #FFFFFE",
+"N 	c #FAF6EF",
+"O 	c #FFFEFA",
+"P 	c #D6C9B1",
+"Q 	c #625335",
+"R 	c #615338",
+"S 	c #FEFEFA",
+"T 	c #F1EDE4",
+"U 	c #E2D9C6",
+"V 	c #CBBDA0",
+"W 	c #2B2924",
+"X 	c #0C0C0C",
+"Y 	c #2B2417",
+"Z 	c #FEFEFE",
+"` 	c #FBF8F0",
+" .	c #E1D8C7",
+"..	c #FFFEF9",
+"+.	c #D1C5AB",
+"@.	c #A89265",
+"#.	c #87734A",
+"$.	c #6A5938",
+"%.	c #635335",
+"&.	c #E1D8C5",
+"*.	c #C5B595",
+"=.	c #322A1A",
+"-.	c #C3B9A3",
+";.	c #EEE9E1",
+">.	c #3B311D",
+",.	c #3A3324",
+"'.	c #4B4B4B",
+").	c #090909",
+"!.	c #927E55",
+"~.	c #FDFAF4",
+"{.	c #655636",
+"].	c #40351F",
+"^.	c #352C18",
+"/.	c #645435",
+"(.	c #786643",
+"_.	c #A18A5B",
+":.	c #6E5D3B",
+"<.	c #584D35",
+"[.	c #97845C",
+"}.	c #E7DFCE",
+"|.	c #584A2F",
+"1.	c #B09F7D",
+"2.	c #D8CDB5",
+"3.	c #615E56",
+"4.	c #454545",
+"5.	c #403622",
+"6.	c #D7CFBE",
+"7.	c #20190C",
+"8.	c #CCBEA2",
+"9.	c #AB9D81",
+"0.	c #786848",
+"a.	c #D7CCB4",
+"b.	c #E9E1D2",
+"c.	c #4B4028",
+"d.	c #796744",
+"e.	c #120F06",
+"f.	c #6B6250",
+"g.	c #484848",
+"h.	c #C6B798",
+"i.	c #FDFAF3",
+"j.	c #A58E61",
+"k.	c #241D0E",
+"l.	c #C9BA9D",
+"m.	c #726344",
+"n.	c #D2C6AC",
+"o.	c #D0C2A8",
+"p.	c #413E38",
+"q.	c #494949",
+"r.	c #6E5F41",
+"s.	c #C7B89A",
+"t.	c #211B0D",
+"u.	c #C7B798",
+"v.	c #AF9B72",
+"w.	c #D3C7AE",
+"x.	c #FFFFFD",
+"y.	c #EFE8DB",
+"z.	c #F1EBDF",
+"A.	c #D3C7AF",
+"B.	c #DED5C1",
+"C.	c #9F885B",
+"D.	c #353535",
+"E.	c #261E0F",
+"F.	c #A38B5C",
+"G.	c #AC966C",
+"H.	c #D7CBB4",
+"I.	c #927C50",
+"J.	c #C3B493",
+"K.	c #F6F2E8",
+"L.	c #BDAC8B",
+"M.	c #FFFFFB",
+"N.	c #DBD0BA",
+"O.	c #1A1A1A",
+"P.	c #3E3520",
+"Q.	c #D1C4AB",
+"R.	c #B19D75",
+"S.	c #1E170B",
+"T.	c #DACFB9",
+"U.	c #E8E0D0",
+"V.	c #A58E60",
+"W.	c #E5DCCB",
+"X.	c #ECE5D8",
+"Y.	c #967F53",
+"Z.	c #473B24",
+"`.	c #C6B697",
+" +	c #E4DBCA",
+".+	c #F3EDE2",
+"++	c #51442C",
+"@+	c #1C1C1C",
+"#+	c #040201",
+"$+	c #100C04",
+"%+	c #221C0F",
+"&+	c #A38D61",
+"*+	c #978155",
+"=+	c #E2D9C7",
+"-+	c #5A4B2F",
+";+	c #857149",
+">+	c #FEFBF5",
+",+	c #271F10",
+"'+	c #0F0B02",
+")+	c #F5F1E7",
+"!+	c #816D46",
+"~+	c #7B6842",
+"{+	c #EBE4D6",
+"]+	c #F8F3EA",
+"^+	c #CDBFA3",
+"/+	c #9D8557",
+"(+	c #18140D",
+"_+	c #2E2615",
+":+	c #2B2415",
+"<+	c #282112",
+"[+	c #140F09",
+"}+	c #C1B498",
+"|+	c #EFE9DD",
+"1+	c #E5DED1",
+"2+	c #382E1B",
+"3+	c #1B1508",
+"4+	c #B5A17B",
+"5+	c #DED3BF",
+"6+	c #9B8B6A",
+"7+	c #FAF5ED",
+"8+	c #CBBDA4",
+"9+	c #080504",
+"0+	c #1D1D1D",
+"a+	c #1D170B",
+"b+	c #BEAD8A",
+"c+	c #020000",
+"d+	c #BAA884",
+"e+	c #E9E1D1",
+"f+	c #EEE7DA",
+"g+	c #E2D9C9",
+"h+	c #252525",
+"i+	c #241E0F",
+"j+	c #D4C8AF",
+"k+	c #292112",
+"l+	c #C0AF8D",
+"m+	c #080500",
+"n+	c #4E4127",
+"o+	c #6B5A39",
+"p+	c #B8A681",
+"q+	c #DBD1BC",
+"r+	c #6E5E3E",
+"s+	c #D8CDB6",
+"t+	c #232121",
+"u+	c #F9F4EC",
+"v+	c #3A301C",
+"w+	c #3E341E",
+"x+	c #0D0801",
+"y+	c #251E0F",
+"z+	c #BCA986",
+"A+	c #B9A783",
+"B+	c #85734F",
+"C+	c #E0D7C4",
+"D+	c #AF9B71",
+"E+	c #0E0B03",
+"F+	c #22201D",
+"G+	c #181209",
+"H+	c #6E5E3C",
+"I+	c #826F48",
+"J+	c #937D51",
+"K+	c #8B764C",
+"L+	c #988254",
+"M+	c #F3EDE3",
+"N+	c #705F3B",
+"O+	c #AB956A",
+"P+	c #0E0C0C",
+"Q+	c #221B10",
+"R+	c #100C03",
+"S+	c #080501",
+"T+	c #050201",
+"U+	c #15110B",
+"V+	c #3D3B37",
+"W+	c #595754",
+"X+	c #615D55",
+"Y+	c #5D574C",
+"Z+	c #4C473D",
+"`+	c #443E33",
+" @	c #D3C7B1",
+".@	c #4F4228",
+"+@	c #423720",
+"@@	c #070400",
+"#@	c #B29F78",
+"$@	c #CEC0A5",
+"%@	c #EDE7D9",
+"&@	c #181818",
+"*@	c #50493E",
+"=@	c #635C4D",
+"-@	c #645D50",
+";@	c #545350",
+">@	c #424242",
+",@	c #756545",
+"'@	c #675C46",
+")@	c #BCAC89",
+"!@	c #C2B292",
+"~@	c #594A2E",
+"{@	c #B7A47E",
+"]@	c #BDAC89",
+"^@	c #625234",
+"/@	c #0E0A02",
+"(@	c #CABC9E",
+"_@	c #14110E",
+":@	c #434343",
+"<@	c #C8BB9D",
+"[@	c #5A513E",
+"}@	c #D1C5AC",
+"|@	c #7C6943",
+"1@	c #514329",
+"2@	c #3D321D",
+"3@	c #2C2413",
+"4@	c #695938",
+"5@	c #907B50",
+"6@	c #111111",
+"7@	c #3C3831",
+"8@	c #362D19",
+"9@	c #AE9A72",
+"0@	c #76694E",
+"a@	c #D9CFB9",
+"b@	c #F6F2E9",
+"c@	c #E0D6C2",
+"d@	c #1D1B18",
+"e@	c #4D4C49",
+"f@	c #1F1A10",
+"g@	c #BFAE8C",
+"h@	c #867758",
+"i@	c #C0AF8E",
+"j@	c #57492E",
+"k@	c #6D5E40",
+"l@	c #0D0A05",
+"m@	c #5C5445",
+"n@	c #17140C",
+"o@	c #A5A5A5",
+"p@	c #988C77",
+"q@	c #D9CEB7",
+"r@	c #1A150C",
+"s@	c #1E180D",
+"t@	c #D8D8D8",
+"u@	c #F8F7F3",
+"v@	c #FAFAF6",
+"w@	c #A09072",
+"x@	c #685839",
+"y@	c #CFC1A6",
+"z@	c #483B25",
+"A@	c #D4C9B2",
+"B@	c #D6CBB4",
+"C@	c #312819",
+"D@	c #2F291D",
+"E@	c #050301",
+"F@	c #EEEAE0",
+"G@	c #7E6B46",
+"H@	c #A38D60",
+"I@	c #86724A",
+"J@	c #847149",
+"K@	c #D5CAB3",
+"L@	c #C9BB9F",
+"M@	c #5D513A",
+"N@	c #151007",
+"O@	c #998459",
+"P@	c #EFEAE1",
+"Q@	c #110C05",
+"R@	c #454139",
+"S@	c #363636",
+"T@	c #1B1B1B",
+"U@	c #5F5134",
+"V@	c #B09C73",
+"W@	c #443A25",
+"X@	c #1C1915",
+"Y@	c #1D1910",
+"Z@	c #0C0905",
+"`@	c #605136",
+" #	c #D1C7B0",
+".#	c #826E47",
+"+#	c #5F5239",
+"@#	c #050505",
+"##	c #726140",
+"$#	c #C3B494",
+"%#	c #382E1C",
+"&#	c #1D190E",
+"*#	c #595348",
+"=#	c #4A4A49",
+"-#	c #211F1B",
+";#	c #1A140B",
+">#	c #8D7950",
+",#	c #786641",
+"'#	c #796742",
+")#	c #9B8557",
+"!#	c #231C10",
+"~#	c #29231A",
+"{#	c #0F0F0F",
+"]#	c #504D45",
+"^#	c #413E39",
+"/#	c #251E14",
+"(#	c #C0B292",
+"_#	c #847048",
+":#	c #372F1C",
+"<#	c #625A4B",
+"[#	c #161108",
+"}#	c #0A0702",
+"|#	c #383124",
+"1#	c #585550",
+"2#	c #474747",
+"3#	c #0B0B0B",
+"4#	c #4B4944",
+"5#	c #414141",
+"6#	c #161414",
+"7#	c #040404",
+"8#	c #2E271A",
+"9#	c #655F52",
+"0#	c #655A44",
+"a#	c #3D382E",
+"b#	c #4E4D4C",
+"c#	c #444444",
+"d#	c #20190E",
+"e#	c #35332D",
+"f#	c #212121",
+"g#	c #36322C",
+"h#	c #565147",
+"i#	c #1A1509",
+"j#	c #423F3A",
+"k#	c #211A0D",
+"l#	c #CEC0A4",
+"m#	c #0B0700",
+"n#	c #60594D",
+"o#	c #3B311E",
+"p#	c #2F2615",
+"q#	c #1C160A",
+"r#	c #635F58",
+"s#	c #322C1F",
+"t#	c #3C3426",
+"u#	c #3B3425",
+"v#	c #393223",
+"w#	c #413A2C",
+"x#	c #514F4B",
+"                              . + @ # $ %                                   ",
+"                              & * = - ; > ,                                 ",
+"                              ' - ) ! ~ { ]                                 ",
+"                              ^ / ( _ : < [                                 ",
+"            } | 1             2 3 ) ! 4 5 6           7 7 8                 ",
+"          9 0 - a b c         d e f g h i j         7 k l m n               ",
+"        o p 3 ! 3 q r s   t u v w x y z A B C     7 D E 3 F G n             ",
+"        H I 3 ) J 3 K L 3 3 3 3 M 3 N O 3 3 P Q H R E S T U V 8 W           ",
+"        X Y E Z Z `  .3 3 ..+.@.#.$.%.#.A &.3 3 *.=.-.;. .P >.,.'.          ",
+"          ).!.3 ~.x 3 3 +.{.].^./.(._._.:.<.[.v 3 }.|.1.2.:.k 3.4.          ",
+"            5.6.y 3 ` @.7.%.K x v 3 3 3 v 8.9.0.a.3 b.c.d.e.f.g.            ",
+"              h.3 i.j.k.K x 3 3 3 3 3 3 3 3 v l.m.n.3 o.].p.q.              ",
+"            r.y 3 s.t._.x 3 3 M n.u.u.v.w.x.y.z.A.m.B.O C.D.                ",
+"            t 3 N E.F.x 3 3 &.G.H.x x H.t I.J.N K.L.G.M.N.O.                ",
+"          P.Q.x.R.S.T.3 3 U.V...3 W.X.w K.Y.Z.`.z  +_.x .+++@+              ",
+"H #+$+%+&+*+=+3 -+;+x 3 3 v.>+~ ,+7 7 '+: )+!+~+{+]+^+`.4 /+(+5._+:+<+[+    ",
+"H }+|+>+3 1+Q.x.2+(.3 3 v l.= 3+7 7 7 7 ;+)+4+k.P 5+~ A v *.6+7+y.x 8+9+0+  ",
+"a+M 3 3 3 }.b+v ^.K 3 3 V W.w.c+7 7 7 7 >.v ~ $.d+H. +u.e+`.r.f+z f+g+% h+  ",
+"i+S 3 3 3 {+j+ +k+l+3 3 V W.T.m+7 7 7 7 n+X.&.o+p+H.=+q+x *.r+q+N.s+P E.t+  ",
+"].j+U.z u+z ~ 3 v+l+3 3 v l.3 w+7 x+7 y+K )+z+S.A+H.U.H.~ l+B+C+w.*.D+E+F+  ",
+"G+:+2+d H+I+]+i.#.@.3 3 3 v.>+)+J+L K+L+v M+N+].; 5+}.N.2.O+P+Q+R+S+T+U+V+  ",
+"  W+X+Y+Z+`+ @O w..@y.3 3 U.L+v .+{+4 y. ++@@@#@5+T.$@%@; (.&@0+*@=@-@;@>@  ",
+"            ,@3 3 '@)@x...3 !@~@{@P +.]@^@/@]@N.P v (@q+H.C _@:@            ",
+"              <@3 j+[@}@~.)+)+w |@1@2@3@4@!@2.q+ +!@ +; 5@6@7@              ",
+"              8@z .+9@0@a@K.b@]+}.!@!@!@s+2.s+b.*.c@2.n.H d@e@              ",
+"            7 C f@{+~.g@h@: M+K.- z w W. +=+v i@&.2.N.j@k@l@m@              ",
+"          7 n@o@p@Q+W.3 5+4+i@`.y .+4 v v `.l.h q@q+w+K 2.:.r@              ",
+"        . s@t@u@v@w@x@T.M.N g H.j+q@P y@N.x 2.2.y@z@#@A@B@P C@D@            ",
+"        E@F@O ~.}.s+G@T+H@U.y %@e+ +U s+H.5+H.I@8 J@2.K@2.2.L@o M@          ",
+"        N@O@P@&.2.o+Q@R@S@T@U@V@g@J.!@z+/+W@O.X@Y@Z@`@ #2.2..#@@+#          ",
+"          @###$#%#&#*#=#    -#;#>#,#'#)#!#~#{#O.]#^#X /#(#_#c+:#<#          ",
+"            [#}#|#1#2#        2+2.2.2.c@k+3#4#5#      6#7#8 8#9#            ",
+"            0#a#b#c#          d#V 2.2.P } e#:@          f#g#h#              ",
+"                              i#*.2.2.$@'+j#                                ",
+"                              k#G.^+l#V@m#n#                                ",
+"                              o#3+p#p#q#,+r#                                ",
+"                                s#t#u#v#w#x#                                ",
+"                                                                            "};
