@@ -2,7 +2,13 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
-30-Aug-2000
+06-Sep-2000
+~~~~~~~~~~~
+Added a much improved icon for executables (Victor Liu See-le).
+Allow '/' on the pinboard and panel (text wasn't displayed - spotted by
+Tim Rowledge).
+
+30-Aug-2000 (Release 0.1.27)
 ~~~~~~~~~~~
 Increased the distance you have to move the pointer to start a drag
 slightly. Updated the manual.
